--- a/.github/workflows/build_n_deploy.yml
+++ b/.github/workflows/build_n_deploy.yml
@@ -3,8 +3,7 @@ name: Build & Deploy
 
 env:
   ARTIFACT_NAME: csye-serverless-${{ github.run_number }}.zip
-  CODEDEPLOY_APP_NAME: csye6225-serverless
-  CODEDEPLOY_DEPLOY_GROUP_NAME: csye6225-serverless-deployment
+  LAMBDA_FUNCTION_NAME: serverless
   AWS_REGION: us-east-1
 
 on: [push]
@@ -23,7 +22,7 @@ jobs:
       - name: Build deployment artifact
         run: |
           mkdir codedeploy_artifact
-          zip -r ${{ env.ARTIFACT_NAME }} lambda_function.py appspec.yml
+          zip -r ${{ env.ARTIFACT_NAME }} lambda_function.py
           mv ${{ env.ARTIFACT_NAME }} codedeploy_artifact
 
       - name: Configure AWS credentials
@@ -37,11 +36,11 @@ jobs:
         run: |
           aws s3 sync ./codedeploy_artifact s3://${{ secrets.S3_CODEDEPLOY_BUCKET }}
 
-      - name: Create Deployment
+      - name: Update lambda function
         run: |
-           aws deploy create-deployment \
-            --application-name ${{ env.CODEDEPLOY_APP_NAME }} \
-            --deployment-group-name ${{ env.CODEDEPLOY_DEPLOY_GROUP_NAME }} \
-            --s3-location bucket=${{ secrets.S3_CODEDEPLOY_BUCKET }},bundleType=zip,key=${{ env.ARTIFACT_NAME }}
+           aws lambda update-function-code \
+            --function-name ${{ LAMBDA_FUNCTION_NAME }} \
+            --s3-bucket s3://${{ secrets.S3_CODEDEPLOY_BUCKET }} \
+            --s3-key ${{ env.ARTIFACT_NAME }}
 
 
