--- a/.github/workflows/build_n_deploy.yml
+++ b/.github/workflows/build_n_deploy.yml
@@ -3,8 +3,8 @@ name: Build & Deploy
 
 env:
   ARTIFACT_NAME: csye-serverless-${{ github.run_number }}.zip
-  LAMBDA_FUNCTION_NAME: serverless
-  AWS_REGION: us-east-1
+  # LAMBDA_FUNCTION_NAME: serverless
+  # AWS_REGION: us-east-1
 
 on: [push]
   # push:
@@ -30,7 +30,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Copy artifact to S3
         run: |
@@ -39,8 +39,8 @@ jobs:
       - name: Update lambda function
         run: |
           aws lambda update-function-code \
-          --function-name ${{ env.LAMBDA_FUNCTION_NAME }} \
-          --s3-bucket s3://${{ secrets.S3_CODEDEPLOY_BUCKET }} \
+          --function-name ${{ secrets.LAMBDA_FUNCTION_NAME }} \
+          --s3-bucket ${{ secrets.S3_CODEDEPLOY_BUCKET }} \
           --s3-key ${{ env.ARTIFACT_NAME }}
 
 
